--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cruise Booking</title>   
+    <title>Cruise Booking</title>  
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,10 +29,10 @@
     </header>
 
     <!--Booking Section-->
-    <main class="main-content container">
+    <main id="booking-area" class="main-content container">
 
         <div class="booking-content">
-            <h1>Cruise Queen</h1>
+            <h1 class="headline">Cruise Queen</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
@@ -40,7 +41,7 @@
             <h3>Book Ocean Time</h3>
             <div class="input-group">
                 <label for="">Flying From</label>
-                <input class="inp-style" type="text" name="" placeholder="Dhake, Bangladesh">
+                <input class="inp-style" type="text" name="" placeholder="Dhaka, Bangladesh">
             </div>
             <div class="input-group">
                 <label for="">Flying To</label>
@@ -105,11 +106,32 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="book-now" class="btn-style">Book Now</button>
         </div>
     </main>
+    <section id="payment-area">
+        <div class="payment-form">
+            <h1 class="text-center text-light headline">Payment Details</h1>
+            <br>
+            <label for="">Name</label>
+            <input type="text" class="form-control" placeholder="Enter your name">
+            <br>
+            <label for="">Email Address</label>
+            <input type="text" class="form-control" placeholder="Enter your email">
+            <br>
+            <label for="">Card Number</label>
+            <input type="text" class="form-control" placeholder="Enter your card number">
+            <br>
+            <label for="">Card (CVC)</label>
+            <input type="text" class="form-control" placeholder="Card verification code (CVC)">
+            <br>
+            <button id="login" class="btn btn-danger">PAY NOW</button>
+        </div>
+    
+    </section>
 
     <script src="script.js"></script>
+    
 </body>
 
 </html>
